Fixing spacing in Options panel
Almost done, just one edge case left.

--- a/src/components/react/Playground/helpers/Options.css
+++ b/src/components/react/Playground/helpers/Options.css
@@ -54,12 +54,11 @@
   .playground-examples
   .playground-options
   .playground-options-section {
-  margin: 1rem 1rem 0rem 1rem;
-  padding-bottom: 1rem;
+  margin: 0.75rem 0.75rem 0rem 0.75rem;
+  padding-bottom: 0.75rem;
   border-bottom: 1px solid var(--neo-color-base-200);
 
   display: grid;
-  grid-gap: 1rem;
 }
 .playground-container
   .playground-examples
@@ -77,4 +76,9 @@
 
 label.playground-options-section-label {
   font-size: 12px; /* TODO: use `var(--neo-web-body-small-font-size)` */
+}
+
+.playground-options-section div.neo-input-group,
+.playground-options-section input.neo-check + label {
+  padding: 0.75rem 0 0 0;
 }
